# ultramotion-igt-inference

./: .gitignore  ARCHITECTURE_CLEAN.md  CHANGELOG.md  CLEANUP_REPORT.md  DASHBOARD_FUSION_SUCCESS.md  DASHBOARD_START.md  DASHBOARD_UNIFIED_SUMMARY.md  DFINE_GPU_RESIDENT_SUCCESS_REPORT.md  GUIDE_MATCHER_GPU_RESIDENT.py  GUIDE_OPTIMISATIONS_AVANCEES.py  ORCHESTRATOR_GPU_RESIDENT_SUCCESS_REPORT.md  PHASE_3_COMPLETION_REPORT.md  PHASE_3_CORRECTIONS_ROADMAP.md  QUICKSTART.md  README.md  REFACTORING_INFERENCE_SAM.md  REFACTORING_ORCHESTRATOR.md  REFACTORING_SAM_PREDICTOR.md  REFACTORISATION_COMPLETE_GPU_RESIDENT.md  audit_gpu_advanced_conditional.py  audit_gpu_phase3_comprehensive.py  audit_gpu_to_cpu.ps1  audit_gpu_to_cpu_advanced.py  check_dependencies.py  diagnostic_interstage_dashboard.py  diagnostic_latencies.py  diagnostic_proc_tx_latency.py  diagnostic_proc_tx_mystery.py  diagnostic_rx_proc_spikes.py  diagnostic_spike_patterns.py  explain_rx_proc_latency.py  gpu_audit_advanced_report.json  gpu_audit_phase3_report.json  gpu_pipeline_kpi_report.json  gpu_to_cpu_audit.txt  gpu_to_cpu_audit_detailed.txt  gpu_to_cpu_report.csv  gpu_to_cpu_summary.md  gpu_transfer_diagnostic.json  launch_dashboard_and_test.ps1  (+44 more)
benchmarks/: bench_logging_overhead.py
docker/: Dockerfile  build.ps1  run.ps1
docs/: Dashboard_Guide.md  Dashboard_Migration_Guide.md  Dashboard_README.md  Dashboard_Unified_README.md  Monitoring_and_KPI.md  frontend_style_audit.md
scripts/: quick_test_orchestrator.py  test_mobilesam_check.py
src/: debug_main.py  main.py  test_imports.py  test_logging.py  (+3 more)
(+217 files in other folders)
